name:                aoc2018-day1-part1
version:             0.1.0.0
synopsis:            Advent of Code Day1 Part1
author:              Erik Nordin
maintainer:          aeketn@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable part1
  main-is:             main.hs
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
