name:                aoc2018-day11-part2
version:             0.1.0.0
synopsis:            Advent of Code 2018 Day11 Part2
author:              Erik Nordin
build-type:          Simple
cabal-version:       >=1.10

executable part2
  main-is:             main.hs
  build-depends:       base >=4.9
  build-depends:       parallel
  default-language:    Haskell2010
