name:                aoc2018-day3-part1
version:             0.1.0.0
synopsis:            Advent of Code 2018 Day3 Part1
author:              Erik Nordin
build-type:          Simple
cabal-version:       >=1.10

executable part1
  main-is:             main.hs
  build-depends:       base >=4.9
  build-depends:       split
  default-language:    Haskell2010
