name:                aoc2018-day4-part2
version:             0.1.0.0
synopsis:            Advent of Code 2018 Day4 Part2
author:              Erik Nordin
build-type:          Simple
cabal-version:       >=1.10

executable part2
  main-is:             main.hs
  build-depends:       base >=4.9 && <4.10
  build-depends:       split
  default-language:    Haskell2010
